--- a/node/11.27.md
+++ b/node/11.27.md
@@ -9,7 +9,25 @@
 1. 购买服务器vps
   >vps virtual Private SErver 虚拟专用服务器;
 
-  -可以翻墙的服务器  *Linode* *DigitalOcean* *BandwagonHOST* 下载 [Shadowsocks.exe](https://github.com/shadowsocks/shadowsocks-windows/releases/download/4.0.6/Shadowsocks-4.0.6.zip)
+  -可以翻墙的服务器  *Linode* *DigitalOcean* *BandwagonHOST* 下载 [Shadowsocks.exe](https://github.com/shadowsocks/shadowsocks-windows/releases/download/4.0.6/Shadowsocks-4.0.6.zip)输入你所买的这几种服务器的公ip密码就可以进行翻墙了;
+
+ol-2. 连接所购买的服务器
+
+- 使用[xshell](https://www.baidu.com/link?url=vOUVLiTl3yllzEQPIeMMrO-M5H7xUtUN8V3c5wuTg7ZSHccmfbLJcDWyhbf6T9dXsuxArRtqRnrIUNgMgH7Mc554faLONTwX89MmSsgZSDi&wd=&eqid=b18328aa00009109000000035a1baaea);
+
+ol-3. 安装nginx
+
+- nginx 可以做反向代理 负载均衡;
+- Apach;
+
+### 安装基本工具
+
+#### 安装 zshell
+
+- zshell 比较任性化
+
+ol-1 apt-get update *更新到最新版本*
+ol-2 apt-get install [name] -y *在乌班图上安装*
 
 ## php基础
 
